sample-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sample-app
  labels:
    app: nginx-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-sample-app
  template:
    metadata:
      labels:
        app: nginx-sample-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
