sample-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample-app
spec:
  selector:
    app: nginx-sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
