sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample-app
  annotations:
    kubernetes.io/ingress.class: "nginx-trial"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-sample-app
            port:
              number: 80
